@@ -1,0 +1,3 @@
+enum Enum1 : byte {
+	Value1, Values
+}
